--- a/public/designer.html
+++ b/public/designer.html
@@ -172,11 +172,43 @@
                             <option value="capitalize">Capitalize</option>
                         </select>
                     </div>
-                    <div class="control-group">
-                        <label class="flex items-center gap-2 cursor-pointer">
-                            <input type="checkbox" id="inp-name-shadow">
-                            Text Shadow
+                    <div class="control-group border-t border-gray-700 pt-2 mt-2">
+                        <label class="flex items-center gap-2 cursor-pointer mb-2">
+                            <input type="checkbox" id="chk-name-shadow">
+                            <span class="font-bold">Drop Shadow</span>
                         </label>
+                        <div id="group-name-shadow" class="space-y-2 pl-2 border-l-2 border-gray-700">
+                            <div class="flex gap-2">
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Color</label>
+                                    <input type="color" id="col-name-shadow" value="#000000"
+                                        class="w-full h-6 rounded cursor-pointer border-0">
+                                </div>
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Opacity</label>
+                                    <input type="number" id="num-name-shadow-opacity" min="0" max="1" step="0.1"
+                                        value="0.5"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                            </div>
+                            <div class="flex gap-2">
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">X Offset</label>
+                                    <input type="number" id="num-name-shadow-x" value="2"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Y Offset</label>
+                                    <input type="number" id="num-name-shadow-y" value="2"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Blur</label>
+                                    <input type="number" id="num-name-shadow-blur" min="0" value="4"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -234,6 +266,46 @@
                             <option value="capitalize">Capitalize</option>
                         </select>
                     </div>
+
+                    <div class="control-group border-t border-gray-700 pt-2 mt-2">
+                        <label class="flex items-center gap-2 cursor-pointer mb-2">
+                            <input type="checkbox" id="chk-role-shadow">
+                            <span class="font-bold">Drop Shadow</span>
+                        </label>
+                        <div id="group-role-shadow" class="space-y-2 pl-2 border-l-2 border-gray-700">
+                            <div class="flex gap-2">
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Color</label>
+                                    <input type="color" id="col-role-shadow" value="#000000"
+                                        class="w-full h-6 rounded cursor-pointer border-0">
+                                </div>
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Opacity</label>
+                                    <input type="number" id="num-role-shadow-opacity" min="0" max="1" step="0.1"
+                                        value="0.5"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                            </div>
+                            <div class="flex gap-2">
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">X Offset</label>
+                                    <input type="number" id="num-role-shadow-x" value="2"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Y Offset</label>
+                                    <input type="number" id="num-role-shadow-y" value="2"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                                <div class="flex-1">
+                                    <label class="text-[10px] text-gray-400">Blur</label>
+                                    <input type="number" id="num-role-shadow-blur" min="0" value="4"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded px-1 text-xs py-1">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
